--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
-
+{% load static %}
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/png" href="{% static 'home\favicon.png' %}">
     <meta charset="UTF-8">
-    <title>blagdeni</title>
+    <title>Blagdeni</title>
 </head>
 <body>
+
+
+<div class="container text-center mt-4 mb-4">
 <h1>Blagdeni</h1> 
+</div>
+
+<div class="input-group mb-3">
+    <div class="input-group-prepend">
+      <button class="btn btn-outline-secondary" type="button" id="button-addon1">Найти</button>
+    </div>
+    <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+  </div>
+
+
+
+
+
+
 </body>
 </html>
